# test-archetype-exercise

./: README.md
selenium-exercise-1/: .gitignore  README.md  behave.ini  pyproject.toml  requirements.txt
selenium-exercise-1/.github/workflows/: test_lambda_test_cloud_ubuntu.yaml  test_lambda_test_selfhosted.yaml  test_lambda_test_selfhosted_cloud.yaml  test_ubuntu.yaml  test_windows.yaml
selenium-exercise-1/configurations/: config.yaml
selenium-exercise-1/features/: environment.py
selenium-exercise-1/features/common/: customcontext.py
selenium-exercise-1/features/pages/: basepo.py
selenium-exercise-1/features/pages/uclregisterpo/: loginpo.py  registerpo.py
selenium-exercise-1/features/pages/uclsearchpo/: searchpo.py
selenium-exercise-1/features/pages/uclsigninpo/: signinpo.py
selenium-exercise-1/features/steps/: uclloginsteps.py  uclregistersteps.py  uclsearchsteps.py  uclsignininsteps.py
selenium-exercise-1/features/testdata/: login.json  register.json  signin.json  test.json
selenium-exercise-1/features/tests/: login.feature  register.feature  signin.feature  test.feature
selenium-exercise-1/utilities/ReusableActions/: BasePage.py  BrowserSupport.py
selenium-exercise-1/utilities/TestDataHelper/: ConfigReader.py  TestDataReader.py
